<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="il.ac.pddailycogresearch.pddailycog.activities.simple.ExitActivity">
    <RelativeLayout
        style="@style/StyleLayuot">
    <TextView
        style="@style/StyleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewExit"
        android:text="@string/close_airplane_mode"/>
    <Button
        style="@style/StyleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewExit"
        android:id="@+id/buttonExitOpenSettings"
        android:layout_marginTop="45dp"
        android:text="@string/open_settings" />
    <Button
        style="@style/StyleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonExitOpenSettings"
        android:id="@+id/buttonExit"
        android:layout_marginTop="45dp"
        android:text="@string/exit"/>

</RelativeLayout>
</RelativeLayout>