<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="il.ac.pddailycogresearch.pddailycog.activities.MainActivity">
<RelativeLayout
    style="@style/StyleLayuot">
    <TextView
        style="@style/StyleTextView"
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text" />

    <Button style="@style/StyleButton"
        android:layout_below="@id/textViewWelcome"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:id="@+id/mainButtonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        />
    <Button
        style="@style/StyleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainButtonOk"
        android:id="@+id/buttonMainOpenQuestionnaire"
        android:text="@string/open_questionnaire"/>

</RelativeLayout>
</RelativeLayout>