<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="il.ac.pddailycogresearch.pddailycog.activities.LoginActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<TextView-->
        <!--android:id="@+id/TextViewTitle"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="25dp"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/sign_in"-->
        <!--android:textSize="20sp"-->
        <!--android:textStyle="bold|italic" />-->

    <EditText style="@style/StyleEditText"
        android:id="@+id/EditTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:hint="@string/username" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:id="@+id/space1"
        android:layout_below="@id/EditTextUserName"/>

    <EditText style="@style/StyleEditText"
        android:id="@+id/EditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/space1"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/password" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:id="@+id/space2"
        android:layout_below="@id/EditTextPassword"/>

    <Button style="@style/StyleButton"
        android:id="@+id/BtnSignIn"
        android:layout_below="@+id/space2"
        android:layout_alignParentBottom="true"
        android:text="@string/sign_in" />
</RelativeLayout>
</ScrollView>
