<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="il.ac.pddailycogresearch.pddailycog.fragments.RatingFragment">
    <!--
            style="@style/StyleTextView"
    -->
    <TextView
        style="@style/StyleTextView"
        android:id="@+id/textViewHowWell"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/kkk"
        android:layout_alignParentTop="true"
        android:text="@string/rating_question"
        app:autoSizeTextType="uniform"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeMinTextSize="15sp"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/kkk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radioGroupRatingFragment"
            style="@style/StyleRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textViewRadioButtonNotWell"
            android:layout_gravity="bottom"

            android:layout_margin="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewRadioButtonNotWell"
                style="@style/StyleTextRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="15sp"
                android:layout_gravity="start"
                android:text="@string/not_well"
               />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                style="@style/StyleTextRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="15sp"

                android:layout_gravity="end"
                android:text="@string/extremely_well"
                />
        </LinearLayout>
    </LinearLayout>
    <!--<LinearLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:orientation="vertical"-->
    <!--android:id="@+id/kkk">-->
    <!--<RadioGroup-->
    <!--android:id="@+id/radioGroupRatingFragment"-->
    <!--style="@style/StyleRadioButton"-->
    <!--android:layout_above="@+id/textViewRadioButtonNotWell"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="15sp"></RadioGroup>-->
    <!--<TextView-->
    <!--android:id="@+id/textViewRadioButtonNotWell"-->
    <!--style="@style/StyleTextRadioButton"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:layout_alignParentStart="true"-->
    <!--android:text="@string/not_well"-->
    <!--android:layout_gravity="start"-->
    <!--android:textSize="15sp" />-->

    <!--<TextView-->
    <!--style="@style/StyleTextRadioButton"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/extremely_well"-->
    <!--android:layout_gravity="end"-->
    <!--android:layout_alignParentBottom="true"-->

    <!--android:layout_alignParentRight="true"-->
    <!--android:layout_alignParentEnd="true"-->
    <!--android:textSize="15sp" />-->
    <!--</LinearLayout>-->
    <!--
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewHowWell">

            <RelativeLayout
                android:id="@+id/layoutRadio"
                style="@style/StyleLayuot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/radioGroupRatingFragment"
                    style="@style/StyleRadioButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp">

                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutRadio"
                android:layout_marginRight="70dp"
                android:layout_marginLeft="100dp">

                <TextView
                    style="@style/StyleTextRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/not_well"
                    android:textSize="15dp" />


                <TextView
                    style="@style/StyleTextRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/extremely_well"

                    android:textSize="15dp" />
            </RelativeLayout>
        </RelativeLayout>
    -->
</RelativeLayout>
